--- a/app/src/main/res/layout/content_chips.xml
+++ b/app/src/main/res/layout/content_chips.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-  android:id="@+id/activity_main"
+  android:id="@+id/content_chips"
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -9,10 +10,15 @@
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
-  tools:context="com.isapp.chips.MainActivity">
+  app:layout_behavior="@string/appbar_scrolling_view_behavior"
+  tools:context=".ChipsActivity"
+  tools:showIn="@layout/activity_chips">
 
-  <TextView
-    android:layout_width="wrap_content"
+  <com.isapp.chips.ChipsView
+    android:id="@+id/chips_view"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Hello World!"/>
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp" />
+
 </RelativeLayout>
